# rmathlib

./: .gitattributes  .gitignore  CNAME  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  docs.yml
math/: Cargo.toml
math/src/: cospi.rs  lib.rs  nmath.rs  rmath.rs
rmathlib/: all.html  fn.bd0.html  fn.bratio.html  fn.chebyshev_eval.html  fn.chebyshev_init.html  fn.cospi.html  fn.dgamma.html  fn.dnorm.html  fn.dpois.html  fn.ebd0.html  fn.gammafn.html  fn.i1mach.html  fn.lbeta.html  fn.lgammacor.html  fn.lgammafn.html  fn.lgammafn_sign.html  fn.log1pmx.html  fn.logspace_add.html  fn.pbeta.html  fn.pgamma.html  fn.pnorm.html  fn.pt.html  fn.qnorm.html  fn.sinpi.html  fn.stirlerr.html  fn.tanpi.html  index.html  sidebar-items.js
rmathlib/bd0/: fn.bd0.html  fn.ebd0.html
rmathlib/chebyshev/: fn.chebyshev_eval.html  fn.chebyshev_init.html
rmathlib/cospi/: fn.cospi.html  fn.sinpi.html  fn.tanpi.html
rmathlib/dgamma/: fn.dgamma.html
rmathlib/dpois/: fn.dpois.html
rmathlib/gamma/: fn.gammafn.html
rmathlib/i1mach/: fn.i1mach.html
rmathlib/lbeta/: fn.lbeta.html
rmathlib/lgamma/: fn.lgammafn.html  fn.lgammafn_sign.html
rmathlib/lgammacor/: fn.lgammacor.html
rmathlib/pbeta/: fn.pbeta.html
rmathlib/pgamma/: fn.log1pmx.html  fn.logspace_add.html  fn.pgamma.html
rmathlib/pt/: fn.pt.html
rmathlib/rmath/: fn.dnorm.html  fn.pnorm.html  fn.qnorm.html
rmathlib/stirlerr/: fn.stirlerr.html
rmathlib/toms708/: fn.bratio.html
src/: bd0.rs  chebyshev.rs  cospi.rs  d1mach.rs  debug.rs  dgamma.rs  dnorm.rs  dpois.rs  dpq.rs  dt.rs  gamma.rs  i1mach.rs  lbeta.rs  lgamma.rs  lgammacor.rs  lib.rs  libc.rs  nmath.rs  pbeta.rs  pgamma.rs  pnorm.rs  pnt.rs  pt.rs  qnorm.rs  rmath.rs  stirlerr.rs  toms708.rs
src/rmathlib/: bd0.rs.html  chebyshev.rs.html  cospi.rs.html  d1mach.rs.html  debug.rs.html  dgamma.rs.html  dnorm.rs.html  dpois.rs.html  dpq.rs.html  gamma.rs.html  i1mach.rs.html  lbeta.rs.html  lgamma.rs.html  lgammacor.rs.html  lib.rs.html  libc.rs.html  nmath.rs.html  pbeta.rs.html  pgamma.rs.html  pnorm.rs.html  pt.rs.html  qnorm.rs.html  rmath.rs.html  stirlerr.rs.html  toms708.rs.html
test/: Cargo.toml  README.md  build.rs
test-math/: Cargo.toml  README.md
test-math/.cargo/: config.toml
test-math/nmath/: README.md
test-math/src/: lib.rs
test/nmath/: bd0.c  pbeta.c  pgamma.c  toms708.c
test/src/: lib.rs
test/src/test_math/: pbeta.rs
test/src/tests/: beta.rs  gamma.rs  mod.rs  norm.rs  pois.rs  rf_internals.rs  utils.rs
