[package]
name = "rmathlib"
description = "A Rust Port of R's C Library of Special Functions"
version = "1.0.0"
include = ["src/", "LICENSE", "README.md"]
edition = "2018"
authors = [
  "Rik Huijzer <github@huijzer.xyz>",
  "Jose Storopoli <jose@storopoli.io>",
]
license = "GPL-2.0-or-later"
categories = ["science", "mathematics", "algorithms"]
keywords = [
  "rmath",
  "math",
  "probability",
  "statistics",
  "stats",
  "distribution",
]
readme = "README.md"
repository = "https://github.com/tla-org/rmathlib"
homepage = "https://github.com/tla-org/rmathlib"
documentation = "https://docs.rs/rmathlib"
rust-version = "1.56.1"

[dependencies]
libm = "0.2"
