[package]
name = "test-rmathlib"
description = "A test crate which is for comparing C and Rust code and should not be published."
edition = "2018"
# Required for old Rust versions.
version = "1.0.0"

[build-dependencies]
# Newer cc versions require a newer Rust version.
cc = ">=1.0.0, <1.0.95"

[dependencies]
rmathlib = { path = "../" }

[dev-dependencies]
approx = "0.5.1"
statrs = "0.16"
